@@ -1,6 +1,8 @@
 === Version 0.6.7
 * Enhancements
   * Updated to use watir-webdriver 0.5.7
+* Fixes
+  * Improved logic around selecting options from select lists
 
 === Version 0.6.6 / 2012-4-26
 * Enhancements
